<resources>
    <string name="app_name">Bike Nepal Mobile.app</string>
    <string name="username">Username</string>
    <string name="login">LogIn</string>
    <string name="password">Password</string>
    <string name="login_txt">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment2_string">This mobile application consist of having firebase as notification cloud service which helps to send message to our application user.</string>
    <string name="fragment1_string">This mobile application consist of having postman as api service platform which helps to register user data into our localhost database.</string>
    <string name="title_activity_welcome">Welcome</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>